--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URL=mongodb+srv://admin:dharathakkar@cluster0.eznm0pv.mongodb.net/
+MONGODB_URL=mongodb+srv://admin:dharathakkar@cluster0.eznm0pv.mongodb.net/   
+# MONGODB_URLmongodb+srv://dharaharichtech:dharaharichtech@cluster0.jwaa2ip.mongodb.net/
 
 JWT_SECRET=fyzyjdertfghbjnkp567vhbjnkm
 
@@ -8,4 +9,4 @@ APP_PASSWORD=seoo rxhl bhsr ezwn
 
 
 API_URL=http://localhost:5000
-PUBLIC_URL=http://localhost:3000
+PUBLIC_URL=http://localhost:3000   
