login with google

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URL=mongodb+srv://admin:dharathakkar@cluster0.eznm0pv.mongodb.net/   
-# MONGODB_URLmongodb+srv://dharaharichtech:dharaharichtech@cluster0.jwaa2ip.mongodb.net/
+# MONGODB_URL=mongodb+srv://admin:dharathakkar@cluster0.eznm0pv.mongodb.net/   
+MONGODB_URL=mongodb+srv://dharaharichtech:dharaharichtech@cluster0.jwaa2ip.mongodb.net/
 
 JWT_SECRET=fyzyjdertfghbjnkp567vhbjnkm
 
@@ -10,3 +10,8 @@ APP_PASSWORD=seoo rxhl bhsr ezwn
 
 API_URL=http://localhost:5000
 PUBLIC_URL=http://localhost:3000   
+
+
+GOOGLE_CLIENT_ID=970170195895-87uqtbspge5k7o28qsuppler5ggjg0a3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
