--- a/.env
+++ b/.env
@@ -11,6 +11,11 @@ APP_PASSWORD=seoo rxhl bhsr ezwn
 API_URL=http://localhost:5000
 PUBLIC_URL=http://localhost:3000   
 
+# facebook
+
+FACEBOOK_CLIENT_ID=3213165085499417
+FACEBOOK_CLIENT_SECRET=b3344fc6467fd2aacfbe6450ee7cb804
+
 
 GOOGLE_CLIENT_ID=970170195895-87uqtbspge5k7o28qsuppler5ggjg0a3.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
