--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ FACEBOOK_CLIENT_SECRET=b3344fc6467fd2aacfbe6450ee7cb804
 GOOGLE_CLIENT_ID=970170195895-87uqtbspge5k7o28qsuppler5ggjg0a3.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
+ADMIN_EMAIL=admin@harichtech.com
+ADMIN_PASSWORD=Admin@123
